Properly aligned the elements into their correct positions. Reworked the CSS to maneuver flexbox and titles. Added fonts and font-size to the headings. Resized placeholder images to wrap correctly.

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,40 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+    /* fix later */
+    margin-bottom: 14px;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+a,
+li {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+}
+
+a {
+    text-decoration: none;
+    color: white;
+}
+
+h1 {
+    font-size: 220%;
+}
+
+h2 {
+    font-size: 200%;
+}
+
+p {
+    /* padding: 24px 48px; */
+    width: 60%;
+    height: auto;
+    border: 1px solid yellow;
 }
 
 .banner {
@@ -14,43 +48,64 @@ header {
     background-size: cover;
     width: 100%;
     height: 100px;
+    margin-bottom: 14px;
 }
 
-.section {
+.about-section {
     display: flex;
-    /* Change flex direction to see how it lines up  */
     flex-direction: column;
-    border: 1px solid turquoise;
+    justify-content: center;
+    align-items: center;
+    border-left: 5px solid turquoise;
 }
 
-#work {
+.work-section {
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
     flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: auto;
+    border-left: 5px solid turquoise;
+    margin-bottom: 14px;
 }
 
 .section-title {
-    display: flex;
-    justify-content: center;
-    border: 1px solid yellow;
+    border: 1px solid red;
+    float: left;
+    width: 100%;
+    height: 100%;
+    margin-right: 24px;
+    text-align: right;
 }
 
+aside {
+    width: 10%;
+}
 
 .projects {
+    border: 1px solid greenyellow;
+    width: 40%;
+    margin: 12px;
     display: flex;
-    border: 1px solid red;
+    justify-content: center;
 }
 
-
 .contact-links {
+    border-left: 5px solid turquoise;
     display: flex;
     flex-direction: row;
     justify-content: center;
-    border: 1px solid wheat;
 }
 
+.contact-links li a {
+    font-size: 120%;
+    margin-right: 14px;
+}
 
+#feature-project {
+    width: 90%;
+}
 
-
-
+#about {
+    margin-bottom: 14px;
+}
